[gd_scene load_steps=15 format=3 uid="uid://ch6ciytfbiypn"]

[ext_resource type="Script" path="res://Scenes/gui/pinpad.gd" id="1_pgvvc"]
[ext_resource type="Texture2D" uid="uid://bhw06twyahbjq" path="res://Assets/REPLACEREPLACE.PNG" id="2_a3e1x"]
[ext_resource type="Texture2D" uid="uid://blqjiwe1v66mc" path="res://Scenes/objects/shapes/circle.png" id="2_nrle8"]
[ext_resource type="Texture2D" uid="uid://bhpgret5qtb2c" path="res://Scenes/objects/shapes/square.png" id="3_cnolb"]
[ext_resource type="Texture2D" uid="uid://dod7x5rx2ayej" path="res://Scenes/objects/shapes/triangle.png" id="4_x6oii"]
[ext_resource type="Texture2D" uid="uid://dv7dr7lo11guk" path="res://Assets/symbol4.png" id="6_1dlyu"]
[ext_resource type="Texture2D" uid="uid://cg5ciqvo8jf3l" path="res://Assets/Mouse-cursor-hand-pointer.svg.png" id="6_6b1q5"]
[ext_resource type="Texture2D" uid="uid://bh7iqvh3kcvf1" path="res://Assets/symbol5.png" id="7_fvm0n"]
[ext_resource type="Texture2D" uid="uid://cy8evoj2ucn0c" path="res://Assets/symbol6.png" id="8_70140"]
[ext_resource type="Texture2D" uid="uid://d16dj0jefuajj" path="res://Assets/symbol7.png" id="9_f58fl"]
[ext_resource type="Texture2D" uid="uid://bqtbthvnkr3ki" path="res://Assets/symbol8.png" id="10_f14ix"]
[ext_resource type="AudioStream" uid="uid://csmbi1sewd7sy" path="res://Assets/Click 2.wav" id="11_8dj52"]
[ext_resource type="Texture2D" uid="uid://dfdhr58od12b4" path="res://Assets/sticky1.png" id="13_khka6"]
[ext_resource type="Texture2D" uid="uid://cy82q7ga2sbds" path="res://Assets/sticky3.png" id="14_i2ere"]

[node name="pinpad" type="Control" groups=["control"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pgvvc")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a3e1x")

[node name="ColorRect2" type="ColorRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.103
anchor_top = 0.066
anchor_right = 0.909
anchor_bottom = 0.827
offset_left = 44.014
offset_top = 43.698
offset_right = -46.1581
offset_bottom = -45.769
color = Color(0.0313726, 0.0156863, 0.847059, 1)

[node name="Circle_Button" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.17
anchor_top = 0.183
anchor_right = 0.253
anchor_bottom = 0.327
offset_left = -0.540024
offset_top = -0.201004
offset_right = 104.284
offset_bottom = 107.576
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_nrle8")

[node name="Square_Button" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.479
anchor_top = 0.181
anchor_right = 0.563
anchor_bottom = 0.287
offset_left = -0.498047
offset_top = 0.292999
offset_right = 102.954
offset_bottom = 136.357
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("3_cnolb")

[node name="Triangle_Button" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.772
anchor_top = 0.167
anchor_right = 0.855
anchor_bottom = 0.311
offset_left = -0.264099
offset_top = -0.249008
offset_right = 104.56
offset_bottom = 107.429
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("4_x6oii")

[node name="Red_Button" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.17
anchor_top = 0.614
anchor_right = 0.253
anchor_bottom = 0.758
offset_left = 0.459991
offset_top = -0.15802
offset_right = 105.284
offset_bottom = 107.52
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("6_1dlyu")

[node name="Blue_Button" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.484
anchor_top = 0.631
anchor_right = 0.556
anchor_bottom = 0.775
offset_left = 0.191956
offset_top = 0.142975
offset_right = 118.788
offset_bottom = 107.92
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("7_fvm0n")

[node name="Green_Button" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.765
anchor_top = 0.634
anchor_right = 0.848
anchor_bottom = 0.778
offset_left = 0.569946
offset_top = -0.0980225
offset_right = 105.394
offset_bottom = 107.679
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("8_70140")

[node name="End_Button" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.765
anchor_top = 0.413
anchor_right = 0.848
anchor_bottom = 0.557
offset_left = 0.569946
offset_top = -0.0110168
offset_right = 105.394
offset_bottom = 107.271
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("9_f58fl")

[node name="Start_Button" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.168
anchor_top = 0.413
anchor_right = 0.251
anchor_bottom = 0.557
offset_left = -0.0160217
offset_top = -0.0110168
offset_right = 104.808
offset_bottom = 107.667
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("10_f14ix")

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
modulate = Color(1, 1, 1, 0.545098)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.357
anchor_top = 0.441
anchor_right = 0.392
anchor_bottom = 0.5
offset_left = 0.465973
offset_top = 0.072998
offset_right = 0.0359497
offset_bottom = 2.138
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="TextureRect"]
modulate = Color(1, 1, 1, 0.545098)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.411
anchor_top = 0.441
anchor_right = 0.446
anchor_bottom = 0.5
offset_left = 0.317932
offset_top = 0.072998
offset_right = -0.112
offset_bottom = 2.138
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="TextureRect"]
modulate = Color(1, 1, 1, 0.545098)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.468
anchor_top = 0.441
anchor_right = 0.5
anchor_bottom = 0.494
offset_left = 0.383911
offset_top = 0.072998
offset_right = 3.84998
offset_bottom = 6.62
expand_mode = 1

[node name="TextureRect5" type="TextureRect" parent="TextureRect"]
modulate = Color(1, 1, 1, 0.545098)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.529
anchor_top = 0.441
anchor_right = 0.566
anchor_bottom = 0.494
offset_left = -0.598083
offset_top = 0.072998
offset_right = -3.44202
offset_bottom = 6.62
expand_mode = 1

[node name="TextureRect6" type="TextureRect" parent="TextureRect"]
modulate = Color(1, 1, 1, 0.545098)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.584
anchor_top = 0.441
anchor_right = 0.619
anchor_bottom = 0.5
offset_left = -0.00805664
offset_top = 0.072998
offset_right = -0.328064
offset_bottom = 2.138
expand_mode = 1

[node name="TextureRect7" type="TextureRect" parent="TextureRect"]
modulate = Color(1, 1, 1, 0.545098)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.639
anchor_top = 0.441
anchor_right = 0.674
anchor_bottom = 0.5
offset_left = 0.581848
offset_top = 0.072998
offset_right = 0.151855
offset_bottom = 2.138
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.135
anchor_top = 0.123
anchor_right = 0.873
anchor_bottom = 0.766
offset_left = 0.62999
offset_top = 0.118996
offset_right = 0.273926
offset_bottom = -0.202026
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Sprite2D2" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.034
anchor_top = 0.515
anchor_right = 0.137
anchor_bottom = 0.665
offset_left = 0.0919991
offset_top = -0.205017
offset_right = 870.106
offset_bottom = 887.745
rotation = -0.0872665
scale = Vector2(0.12, 0.123)
texture = ExtResource("13_khka6")

[node name="Sprite2D3" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.834
anchor_top = 0.532
anchor_right = 0.955
anchor_bottom = 0.736
offset_left = 13.4921
offset_top = 0.0960083
offset_right = 860.79
offset_bottom = 847.708
rotation = 0.0872665
scale = Vector2(0.1525, 0.1525)
texture = ExtResource("14_i2ere")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_8dj52")
volume_db = 15.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(599, 326)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_6b1q5")
centered = false
offset = Vector2(-30, -50)
region_enabled = true
region_rect = Rect2(101.3, 139.6, 358.725, 614.785)

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="TextureRect/Circle_Button" to="." method="_on_circle_button_pressed"]
[connection signal="pressed" from="TextureRect/Square_Button" to="." method="_on_square_button_pressed"]
[connection signal="pressed" from="TextureRect/Triangle_Button" to="." method="_on_triangle_button_pressed"]
[connection signal="pressed" from="TextureRect/Red_Button" to="." method="_on_red_button_pressed"]
[connection signal="pressed" from="TextureRect/Blue_Button" to="." method="_on_blue_button_pressed"]
[connection signal="pressed" from="TextureRect/Green_Button" to="." method="_on_green_button_pressed"]
[connection signal="pressed" from="TextureRect/End_Button" to="." method="_on_end_button_pressed"]
[connection signal="pressed" from="TextureRect/Start_Button" to="." method="_on_start_button_pressed"]
